beome a seller page fixed

--- a/src/app/usercomponents/landingnavbar/landingnavbar.component.html
+++ b/src/app/usercomponents/landingnavbar/landingnavbar.component.html
@@ -100,7 +100,7 @@
             [newestOnTop]="true"
             [pauseOnHover]="true"
           ></lib-toastify-toast-container>
-          <img src="./assets/images/logo1.png" alt="MetaNet Logo" class="mb-6 w-20" />
+          <img src="./assets/images/logo1.png" alt="StyleSphere Logo" class="mb-6 w-20" />
           <h2 class="text-3xl font-bold mb-6">LOGIN</h2>
           <!-- login - form -->
           <form class="w-full" [formGroup]="loginForm" (ngSubmit)="login()" >
@@ -141,7 +141,7 @@
             </a>
           </div>
           <div class="mt-6 text-center">
-            <span class="text-sm">New to MetaNet? <a (click)="showRegister()" class="text-darkpink hover:underline">Create Your Account</a></span>
+            <span class="text-sm">New to StyleSphere? <a (click)="showRegister()" class="text-darkpink hover:underline">Create Your Account</a></span>
           </div>
         </div>
       </div>
@@ -263,7 +263,7 @@
       <div class="relative h-10 mt-3  bg-background  flex items-center justify-center text-center">
         <img src="assets/images/image07.png" alt="background" class="absolute  w-full h-10 object-cover bg-repeat opacity-45" />
         <div class="relative z-10 mx-3">
-          <p class="text-sm text-metawhite">"Become a part of Metanet and elevate your AR/VR projects. Discover new possibilities, collaborate with peers, and bring your visions to life."</p>
+          <p class="text-sm text-metawhite">"Become a part of StyleSphere and elevate your AR/VR projects. Discover new possibilities, collaborate with peers, and bring your visions to life."</p>
         </div>
       </div>
     </div>
