--- a/src/app/usercomponents/user-transactions/user-transactions.component.html
+++ b/src/app/usercomponents/user-transactions/user-transactions.component.html
@@ -13,7 +13,7 @@
   <!-- details - panel -->
   <div class="bg-purple1  mt-3  p-6 rounded-lg shadow-lg">
     <p-tabView selectOnFocus="true">
-      <p-tabPanel header="My Models">
+      <p-tabPanel header="My Items">
         <div class="flex justify-between mb-6 text-metawhite">
         </div>
 
@@ -24,7 +24,7 @@
             class="bg-darkpink text-metawhite rounded-lg px-6 py-4 flex items-center w-1/4 justify-center hover:bg-pink1 transition-transform transform hover:scale-105 shadow-lg upload-button"
           >
             <i class="pi pi-upload"></i>
-            <span class="ml-3 text-lg font-semibold">Upload Model</span>
+            <span class="ml-3 text-lg font-semibold">Upload Item</span>
           </button>
         </div>
 
