--- a/src/app/usercomponents/marketplace-shoppingcart/marketplace-shoppingcart.component.html
+++ b/src/app/usercomponents/marketplace-shoppingcart/marketplace-shoppingcart.component.html
@@ -85,18 +85,13 @@
   <div class="relative h-60  bg-background   flex items-center justify-center text-center">
     <img src="assets/images/img marketcheckout.png" alt="background"
       class="absolute  w-full h-60 object-cover bg-repeat opacity-50" />
-    <div class="relative z-10">
-      <h2 class="text-2xl font-light text-metawhite">"Experience the future of architecture with the Contemporary
-        Cultural <br>Center 3D model. Perfectly designed for virtual tours, educational <br>purposes, and detailed
-        project visualizations, bringing modern <br>innovation to your fingertips."</h2>
-
-    </div>
+      <div class="relative z-10">
+        <h2 class="text-2xl font-light text-metawhite">
+          "Elevate your wardrobe with our exclusive collection. Perfectly curated for <br>every occasion, blending comfort, style, and elegance to redefine your <br>fashion statement. Discover the art of dressing with us."
+        </h2>
+      </div>      
   </div>
 
 </div>
 
-
-
-
-  <!-- footer -->
-  <app-footer></app-footer>
+<app-footer></app-footer>
