--- a/src/app/usercomponents/upload-success/upload-success.component.html
+++ b/src/app/usercomponents/upload-success/upload-success.component.html
@@ -6,7 +6,7 @@
     <img src="assets/images/Register complete.png" alt="abstract-mountain-background"
       class="absolute w-full h-full object-cover bg-repeat opacity-85" />
     <div class="relative z-10 items-center md:mr-16 text-center px-0">
-      <p class="text-4xl md:text-4xl font-bold text-metawhite opacity-80">Model Upload Completed!</p>
+      <p class="text-4xl md:text-4xl font-bold text-metawhite opacity-80">Item Upload Completed!</p>
     </div>
   </div>
 
@@ -14,8 +14,8 @@
     <img src="assets/images/complete mark.png" alt="abstract-mountain-background" class="w-48 mt-8" />
     <div class="relative items-center text-center">
       <h1 class="text-2xl md:text-3xl font-extrabold mb-2 text-metawhite opacity-80">Successfully Uploaded!</h1>
-      <p class="text-pink1 text-lg md:text-xl font-light mb-4">Your model has successfully uploaded to MetaNet</p>
-      <p class="text-metawhite text-lg md:text-xl font-light mb-2">Here is your model</p>
+      <p class="text-pink1 text-lg md:text-xl font-light mb-4">Your Item has successfully uploaded to MetaNet</p>
+      <p class="text-metawhite text-lg md:text-xl font-light mb-2">Here is your Item</p>
     </div>
   </div>
 
