--- a/src/app/usercomponents/marketplace-products/marketplace-products.component.html
+++ b/src/app/usercomponents/marketplace-products/marketplace-products.component.html
@@ -11,7 +11,7 @@
         id="searchQueryInput"
         type="text"
         name="searchQueryInput"
-        placeholder="Search models..."
+        placeholder="Search Items..."
         [(ngModel)]="searchQuery"
         (input)="applyFilters()"
         class="w-full h-12 text-lg text-metawhite rounded-full border-2 border-darkpurple bg-background focus:outline-none search"
