--- a/src/app/usercomponents/marketplace-shoppingcart/marketplace-shoppingcart.component.html
+++ b/src/app/usercomponents/marketplace-shoppingcart/marketplace-shoppingcart.component.html
@@ -83,7 +83,7 @@
 
 
   <div class="relative h-60  bg-background   flex items-center justify-center text-center">
-    <img src="assets/images/img marketcheckout.png" alt="background"
+    <img src="https://www.icf.edu.in/blog/wp-content/uploads/2023/11/Fashion-Designing-Where-Artistry-Meets-the-Runway.png" alt="background"
       class="absolute  w-full h-60 object-cover bg-repeat opacity-50" />
       <div class="relative z-10">
         <h2 class="text-2xl font-light text-metawhite">
