--- a/src/app/usercomponents/ordersuccessful/ordersuccessful.component.html
+++ b/src/app/usercomponents/ordersuccessful/ordersuccessful.component.html
@@ -24,7 +24,7 @@
   <div class="w-full mt-12 flex items-center justify-center">
     <button class="bg-pink1 rounded-xl text-white p-4 text-center w-1/5 h-10 text-lg mt-4"
             routerLink="/userprofile">
-      Go to Download Page
+      Go to Purchases Page
     </button>
   </div>
   <div class="h-12"></div>
