--- a/src/app/usercomponents/user-navbar/user-navbar.component.html
+++ b/src/app/usercomponents/user-navbar/user-navbar.component.html
@@ -11,13 +11,11 @@
       <i class="text-2xl pi pi-shopping-cart" pBadge value="{{getCartCount()}}"></i>
     </button>
 
-
-
     <!-- Become Creator Button -->
     <button
       (click)="navigateTo()"
       class="w-32 h-10 mx-10  text-sm font-medium transition-all duration-300 border rounded-md shadow-md  text-metawhite bg-background border-spacing-1 border-darkpurple hover:bg-lightpink">
-      Become Creator
+      Become a Seller
     </button>
     <div class="flex card justify-content-center">
       <!-- Menu -->
