--- a/src/app/usercomponents/user-transactions/user-transactions.component.html
+++ b/src/app/usercomponents/user-transactions/user-transactions.component.html
@@ -82,7 +82,7 @@
           <div
             class="bg-purple1 text-metawhite p-4 grid grid-cols-2 rounded-lg shadow-md hover:bg-darkpurple hover:text-metawhite border border-darkpink">
             <div>
-              <h2 class="text-lg font-semibold ">Total Models</h2>
+              <h2 class="text-lg font-semibold ">Total Items</h2>
               <p class="text-2xl lg:text-2xl">{{totalModels}}</p>
             </div>
           </div>
@@ -92,14 +92,6 @@
             <div>
               <h2 class="text-lg font-semibold ">Total Earnings</h2>
               <p class="text-2xl lg:text-2xl">{{totalEarnings}}</p>
-            </div>
-          </div>
-
-          <div
-            class="bg-purple1 text-metawhite p-4 grid grid-cols-2 rounded-lg shadow-md hover:bg-darkpurple hover:text-metawhite border border-darkpink">
-            <div>
-              <h2 class="text-lg font-semibold ">Rejected Models</h2>
-              <p class="text-2xl lg:text-2xl">{{totalRejected}}</p>
             </div>
           </div>
 
